# hearch

./: .gitignore  LICENSE  README.md  hearch.cabal  reset.bash  runTests.bash  setup.bash  setupDB.bash
data/: crawled.txt  ignore.txt  urlsDef.txt
data/backup/: crawled.txt  urls.txt  words.db
src/: Crawler.hs  Main.hs
src/exc/: Main.hs
src/lib/: Crawler.hs  Database.hs  Rank.hs  Search.hs
test/: TestHearch.hs
