name:           hearch
version:        1.0.0
synopsis:       search engine in haskell
description:    todo
maintainer:     rudyardrichter@uchicago.edu
license:        MIT
license-file:   LICENSE
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  README.md

executable hearch
  main-is:          Main.hs
  hs-source-dirs:   src/exc
  build-depends:    base >= 4.7 && < 4.8,
                    hearch
  default-language: Haskell2010
  ghc-options:      -Wall

library
  hs-source-dirs:   src/lib
  exposed-modules:  Crawler,
                    Database,
                    Search,
                    Rank
  build-depends:    base >= 4.7 && < 4.8,
                    hedis,
                    HTTP,
                    tagsoup,
                    bytestring,
                    containers
  default-language: Haskell2010

source-repository head
  type:             git
  location:         https://github.com/dQuixote/hearch
