name:           hearch
version:        1.0.0
synopsis:       search engine in haskell
description:    todo
maintainer:     rudyardrichter@uchicago.edu
license:        MIT
license-file:   LICENSE
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  .gitignore
  data/ignore.text
  README.md
  setupDB.bash

executable hearch
  main-is:          Main.hs
  hs-source-dirs:   src/exc
  build-depends:    base >= 4.7 && < 4.8,
                    hearch
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite test-hearch
  hs-source-dirs:   test
  main-is:          TestHearch.hs
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.7 && < 4.8,
                    hspec,
                    hearch
  default-language: Haskell2010

library
  hs-source-dirs:   src/lib
  exposed-modules:  Crawler,
                    Database,
                    Search
  build-depends:    base >= 4.7 && < 4.8,
                    bytestring,
                    containers,
                    HTTP,
                    sqlite-simple,
                    tagsoup
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-name-shadowing -fno-warn-unused-binds

source-repository head
  type:             git
  location:         https://github.com/dQuixote/hearch
